[project]
name = "Social Media Video Downloader"
version = "0.1.0"
description = "A FastAPI backend using yt-dlp to download and stream videos from YouTube, TikTok, Facebook, Instagram, Twitter, and more. Supports resolution selection, original filenames, and browser streaming. Easy to integrate with web or mobile apps. For educational use only."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
    "yt-dlp>=2025.7.21",
]
