[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-video-downloader"
version = "1.0.0"
description = "A FastAPI backend for downloading videos."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "yt-dlp",
    "aiohttp"
]
